--- a/html/bonus.html
+++ b/html/bonus.html
@@ -62,16 +62,16 @@
     <div class="bonus-container">
         <div class="bonus-info">
             <div class="sponsor-info">
-                <a href="https://www.instagram.com/pabluoff/">
-                    <img src="/img/pabluoff.jpg" alt="Foto do patrocinador">
+                <a href="https://www.instagram.com/olucasaraujo10">
+                    <img src="/img/tauan.jpg" alt="Foto do patrocinador">
                 </a>
                 <div class="sponsor-details">
-                    <a href="https://www.instagram.com/pabluoff/">
+                    <a href="https://www.instagram.com/olucasaraujo10">
                         <h2>Pabluoff</h2>
                     </a>
                     <span class="verified-badge"><i class="fas fa-check-circle"></i> Verificado</span>
                 </div>
-                <a href="https://www.instagram.com/pabluoff/">
+                <a href="https://www.instagram.com/olucasaraujo10">
                     <div class="follow-button">Seguir</div>
                 </a>
             </div>
