--- a/html/bonus.html
+++ b/html/bonus.html
@@ -67,7 +67,7 @@
                 </a>
                 <div class="sponsor-details">
                     <a href="https://www.instagram.com/olucasaraujo10">
-                        <h2>Pabluoff</h2>
+                        <h2>Lucas</h2>
                     </a>
                     <span class="verified-badge"><i class="fas fa-check-circle"></i> Verificado</span>
                 </div>
