--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="login-container">
             <img src="/img/logo.png" alt="Logo do aplicativo" class="logo">
             <h1 class="headline">SEJA BEM VINDO</h1>
-            <p class="subtitle">Insira o e-mail usado na compra.</p>
+            <p class="subtitle">Insira o e-mail usado no cadastro.</p>
             <input type="email" id="email" class="custom-input" placeholder="Digite seu e-mail">
             <button id="login-button" class="custom-button" onclick="verificarEmail()">
                 <span id="login-text">ENTRAR</span>
