--- a/html/bonus.html
+++ b/html/bonus.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" id="favicon" href="/img/logo.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png">
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" id="favicon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Bônus</title>
 </head>
 
@@ -33,7 +33,7 @@
                 <span class="notification-badge" id="notification-badge">1</span>
                 <div class="notification-dropdown">
                     <div class="notification-item">
-                        <img src="/img/user.webp" alt="Logo do aplicativo" class="notification-logo">
+                        <img src="img/user.webp" alt="Logo do aplicativo" class="notification-logo">
                         <p>
                             <a href="https://go.aff.7k-partners.com/f3csgj78" class="notification-link">
                                 <span class="notification-text">Bônus 100% do depósito em casino</span>
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="user-dropdown">
-                <img src="/img/user.webp" alt="Foto do usuário" class="user-avatar" id="user-avatar">
+                <img src="img/user.webp" alt="Foto do usuário" class="user-avatar" id="user-avatar">
                 <div class="user-dropdown-content" id="user-dropdown-content">
                     <span id="user-email"></span>
                     <hr class="divider">
@@ -63,7 +63,7 @@
         <div class="bonus-info">
             <div class="sponsor-info">
                 <a href="https://www.instagram.com/olucasaraujo10">
-                    <img src="/img/tauan.jpg" alt="Foto do patrocinador">
+                    <img src="img/tauan.jpg" alt="Foto do patrocinador">
                 </a>
                 <div class="sponsor-details">
                     <a href="https://www.instagram.com/olucasaraujo10">
@@ -94,7 +94,7 @@
 
     <!-- MENU -->
     <div class="bottom-navigation">
-        <a href="/html/home.html" class="bottom-nav-item home">
+        <a href="html/home.html" class="bottom-nav-item home">
             <i class="fas fa-home"></i>
             <span>Inicio</span>
         </a>
@@ -106,7 +106,7 @@
             <i class="fa-regular fa-circle-check"></i>
             <span>Resultados</span>
         </a>
-        <a href="/html/ranking.html" class="bottom-nav-item ranking">
+        <a href="html/ranking.html" class="bottom-nav-item ranking">
             <i class="fa-solid fa-medal"></i>
             <span>Ranking</span>
         </a>
@@ -117,7 +117,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
