--- a/html/aviator.html
+++ b/html/aviator.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" id="favicon" href="/img/logo.png">
+    <link rel="icon" id="favicon" href="img/logo.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png">
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="stylesheet" href="css/style.css">
     <title>Aviator</title>
 </head>
 
@@ -16,7 +16,7 @@
     <!-- Inicio nav -->
     <div class="navbar">
         <div class="navbar-left">
-            <a href="/html/home.html">
+            <a href="html/home.html">
                 <i class="fa-solid fa-arrow-left"></i>
             </a>
             <span class="navbar-brand">Aviator</span>
@@ -36,7 +36,7 @@
                 <span class="notification-badge" id="notification-badge">1</span>
                 <div class="notification-dropdown">
                     <div class="notification-item">
-                        <img src="/img/user.webp" alt="Logo do aplicativo" class="notification-logo">
+                        <img src="img/user.webp" alt="Logo do aplicativo" class="notification-logo">
                         <p>
                             <a href="https://go.aff.7k-partners.com/f3csgj78" class="notification-link">
                                 <span class="notification-text">Bônus 100% do depósito em casino</span>
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <div class="user-dropdown">
-                <img src="/img/user.webp" alt="Foto do usuário" class="user-avatar" id="user-avatar">
+                <img src="img/user.webp" alt="Foto do usuário" class="user-avatar" id="user-avatar">
                 <div class="user-dropdown-content" id="user-dropdown-content">
                     <span id="user-email"></span>
                     <hr class="divider">
@@ -103,7 +103,7 @@
 
     <!-- MENU -->
     <div class="bottom-navigation">
-        <a href="/html/home.html" class="bottom-nav-item home active">
+        <a href="html/home.html" class="bottom-nav-item home active">
             <i class="fas fa-home"></i>
             <span>Inicio</span>
         </a>
@@ -115,11 +115,11 @@
             <i class="fa-regular fa-circle-check"></i>
             <span>Resultados</span>
         </a>
-        <a href="/html/ranking.html" class="bottom-nav-item ranking">
+        <a href="html/ranking.html" class="bottom-nav-item ranking">
             <i class="fa-solid fa-medal"></i>
             <span>Ranking</span>
         </a>
-        <a href="/html/bonus.html" class="bottom-nav-item bonus">
+        <a href="html/bonus.html" class="bottom-nav-item bonus">
             <i class="fa-solid fa-star"></i>
             <span>Bônus</span>
         </a>
@@ -231,7 +231,7 @@
         }, 4000);
     </script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 
