--- a/html/crash.html
+++ b/html/crash.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" id="favicon" href="/img/logo.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png">
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="icon" id="favicon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="/css/style.css">
     <title>Crash</title>
 </head>
