--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="css/login.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="icon" id="favicon" href="/img/logo.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/logo.png">
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="icon" id="favicon" href="img/logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
     <title>Login</title>
 </head>
 
 <body>
     <div class="container">
         <div class="login-container">
-            <img src="/img/logo.png" alt="Logo do aplicativo" class="logo">
+            <img src="img/logo.png" alt="Logo do aplicativo" class="logo">
             <h1 class="headline">SEJA BEM VINDO</h1>
             <p class="subtitle">Insira o e-mail usado no cadastro.</p>
             <input type="email" id="email" class="custom-input" placeholder="Digite seu e-mail">
@@ -49,7 +49,7 @@
             <span id="notification-success-text" class="notification-text"></span>
         </div>
     </div>
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
